--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "eslint-plugin-standard": "^4.0.0",
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
-    "mockjs": "^1.0.1-beta3"
-  }
+    "mockjs": "^1.0.1-beta3",
+    "node-sass": "^4.11.0"
+  },
+  "proxy": "http://localhost:9527"
 }
